# jsonview

./: .gitignore  GitHub_Actions_使用指南.md  GitHub_Actions_修复总结.md  GitHub_Actions_故障排查.md  GitHub_Actions_错误修复.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  优化总结.md  优化速查表.md  快速修复指南.md  快速参考.md  性能优化使用说明.md  更新说明.md  本次更新总结.md  立即执行.md  验证更新.md
.github/workflows/: build.yml  tag-on-main.yml  test-build.yml
scripts/: create-github-repo.ps1  create-github-repo.sh  ensure-nsis-windows.ps1  quick-release.ps1  release.ps1  release.sh  version.ps1
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/nsis/: SimpChinese.nsh
src/components/: JsonEditorPanel.vue  JsonNode.vue  JsonTreeView.vue  SearchPanel.vue  StatusBar.vue  TabBar.vue  ThemeSwitcher.vue  TitleBar.vue  Toolbar.vue
src/services/: fileService.ts  formatter.ts  jsonParser.ts  searchService.ts
src/store/: useJsonStore.ts  useThemeStore.ts
src/types/: json.ts
