[package]
name = "jsonview"
version = "1.0.0"
description = "JSON 界面阅读器"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
# 需要开启 devtools 特性，才能在 Rust 端调用 open_devtools()
tauri = { version = "1.0.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-single-instance = "2.3.7"
url = "2.5"

[profile.release]
opt-level = "s"

